assets/styles/index.scss
@import '~bootstrap/scss/bootstrap';
$purple: #522D80;
$orange: #F66733;

body, html {
    height: 100%;
}

main {
  width: 56.25rem;
  margin: 0 auto;
}

h1 {
  font-family: "Kaushan Script", cursive;
  font-size: 6.5rem;
}

h3 {
  text-align: center;
  font-weight: bold;
  font-family: "Ubuntu", sans-serif;
  margin-top: 1rem;
}

p {
  font-family: "Ubuntu", sans-serif;

  // Hyphenation set below with necessary prefixes and fallbacks
  // Hyphens turned on
  // Limit word length and # of chars before & after hyphen
  // Limit # of consecutive hyphens
  // Prevent hypens on last line of paragraph
  // Set hyphenation zone to prevent over-hyphenization

  // code below sourced from http://clagnut.com/blog/2395

  // Safari
  -webkit-hyphens: auto;
  -webkit-hyphenate-limit-before: 3;
  -webkit-hyphenate-limit-after: 3;
  -webkit-hyphenate-limit-chars: 6 3 3;
  -webkit-hyphenate-limit-lines: 2;
  -webkit-hyphenate-limit-last: always;
  -webkit-hyphenate-limit-zone: 8%;

  // Firefox
  -moz-hyphens: auto;
  -moz-hyphenate-limit-chars: 6 3 3;
  -moz-hyphenate-limit-lines: 2;
  -moz-hyphenate-limit-last: always;
  -moz-hyphenate-limit-zone: 8%;

  //IE & Edge
  -ms-hyphens: auto;
  -ms-hyphenate-limit-chars: 6 3 3;
  -ms-hyphenate-limit-lines: 2;
  -ms-hyphenate-limit-last: always;
  -ms-hyphenate-limit-zone: 8%;

  // Fallbacks
  hyphens: auto;
  hyphenate-limit-chars: 6 3 3;
  hyphenate-limit-lines: 2;
  hyphenate-limit-last: always;
  hyphenate-limit-zone: 8%;
}

footer {
  border-top: 0.2rem solid $orange;
  background-color: $purple;
  height: 10rem;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 4rem;
}

footer p {
  margin: 0;
}

section {
  margin: 1rem 0;
}

.about-header {
  font-style: italic;
  font-weight: bold;
  margin-bottom: 0.1rem;
  text-decoration: underline $purple;
  color: $orange;
}

.contact {
  text-align: center;
}
.contact-email {
  color: $purple;
  font-weight: bold;
}

.footer-icon {
  margin: 0 1rem 0 1rem;
  color: #fff;
}

.footer-icon:hover {
  color: $orange;
}

.footer-icon i {
  font-size: 1.5rem;
}

.icons-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 2rem;
}

.icon-img {
  font-size: 5rem;
  margin: 1.5rem;
}

/* The hero image */
.hero-image {
  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("public/cefalu.jpg");

  /* Set a specific height */
  height: 50%;

  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

/* Place text in the middle of the image */
.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-weight: bold;
  text-shadow:
    -0.0625rem -0.0625rem 0 #000,
    0.0625rem -0.0625rem 0 #000,
    -0.0625rem 0.0625rem 0 #000,
    0.0625rem 0.0625rem 0 #000;
}

.profile-img {
  display: block;
  width: 31.25rem;
  border: 0.1875rem solid $purple;
  border-radius: 50px;
  margin: 2rem auto;
}

.projects {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 21.875rem;
  height: 21.875rem;
  border: 0.25rem solid $purple;
  margin-top: 2rem;
  margin-bottom: 3rem;
}

.project-overview {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin-bottom: 3rem;
}

.tic-tac-toe {
  background-image: url("public/tic-tac-toe.png");
  background-size: cover;
}

.collection-builder {
  background-image: url("public/collection-builder.png");
  background-size: cover;
}

.would-you-rather {
  background-image: url("public/would-you-rather.png");
  background-size: cover;
}

.readers-wishlist {
  background-image: url("public/readers-wishlist.png");
  background-size: cover;
}

.projects.effect .info {
  background: #333333;
  background: rgba(0, 0, 0, 0.6);
  opacity: 0;
  pointer-events: none;
  -webkit-transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  transition: all 0.35s ease-in-out;
}
.projects.effect .info h3 {
  visibility: hidden;
  color: #fff;
  text-transform: uppercase;
  position: relative;
  letter-spacing: 0.125rem;
  font-size: 1.5rem;
  margin: 0 1.875rem;
  text-shadow: 0 0 0.0625rem white, 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.3);
  -webkit-transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  transition: all 0.35s ease-in-out;
}
.projects.effect .info p {
  visibility: hidden;
  color: #bbb;
  padding: 0.625rem 0.3125rem;
  font-style: italic;
  margin: 0 1.875rem;
  font-size: 1rem;
  border-top: 0.0625rem solid rgba(255, 255, 255, 0.5);
  -webkit-transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  transition: all 0.35s ease-in-out;
}

.projects.effect a:hover {
  text-decoration: none;
}

.projects.effect a:hover .info {
  opacity: 1;
}
.projects.effect a:hover h3 {
  visibility: visible;
}
.projects.effect a:hover p {
  visibility: visible;
}

.projects.effect.from_left_and_right .info h3 {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  -o-transform: translateX(-100%);
  transform: translateX(-100%);
}
.projects.effect.from_left_and_right .info p {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  -o-transform: translateX(100%);
  transform: translateX(100%);
}
.projects.effect.from_left_and_right a:hover h3 {
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}
.projects.effect.from_left_and_right a:hover p {
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}

.section-head {
  color: $orange;
  text-decoration: underline;
  text-decoration-color: $purple;
  margin-top: 4rem;
}

.info-back {
  height: 21.875rem;
  width: 21.875rem;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.contact-text {
  margin-top: 1rem;
}

@media only screen and (max-width: 768px) {
  main, .profile-img {
    width: 100%;
  }
  h1 {
    font-size: 4rem;
  }
  .icon-img {
    font-size: 4rem;
    margin: 1.25rem;
  }
}

@media only screen and (min-width: 300px) and (max-width: 768px) {
  .icon-img {
    font-size: 3rem;
    margin: 1.25rem;
  }
}

